tests/paczka1/fuzzy1/79530789.err
Error in line 6: S867 S906 39,13
Error in line 14: 6NegG S867 43,9
Error in line 2: S867 S906 12,2
Error in line 22: 9cMq8U S906 64,2
Error in line 24: 9cMq8U S867 83,6
